# open-dota

./: Cargo.toml
bevy_ecss/assets/sheets/: interaction.css
bevy_ecss/examples/: interaction.rs
bevy_ecss/src/: component.rs  parser.rs  selector.rs  system.rs
bevy_markup_ui/: Cargo.toml
bevy_markup_ui/assets/: box.bxml  button.bss  button.bxml  button.css  button.html
bevy_markup_ui/examples/: button.rs
bevy_markup_ui/src/: lib.rs  loader.rs  widget.rs  widget_registry.rs  widgets.rs
bevy_markup_ui/src/bxml/: loader.rs  mod.rs  parser.rs
bevy_markup_ui_derive/: Cargo.toml
bevy_markup_ui_derive/src/: lib.rs
open_dota/: Cargo.toml
open_dota/assets/ui/: main_menu.html
open_dota/src/: main.rs
open_dota/src/main_menu/: mod.rs
open_dota_server/: Cargo.toml
open_dota_server/src/: lib.rs  main.rs
