[package]
name = "bevy_markup_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_markup_ui_derive = { path = "../bevy_markup_ui_derive" }
bevy = { workspace = true }
bevy_ecss = "0.3"
scraper = "0.15"
ego-tree = "*"
anyhow = "1.0"
parking_lot = "0.12"
thiserror = "1.0"
roxmltree = "0.18"
